Fixing up validator errors - 2

--- a/index.html
+++ b/index.html
@@ -1,22 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Velvet Crumbs</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <!-- Header Section -->
     <header>
       <nav class="navbar">
         <div class="nav-left">
-          <img
-            src="images/circular_logo.png"
-            alt="Velvet Crumbs Logo"
-            class="logo"
-          />
+          <img src="images/circular_logo.png" alt="Velvet Crumbs Logo" class="logo">
         </div>
         <div class="nav-center">
           <a href="#about">About</a>
