Final validator fixes

--- a/index.html
+++ b/index.html
@@ -1,79 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Velvet Crumbs</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <!-- Header Section -->
-    <header>
-      <nav class="navbar">
-        <div class="nav-left">
-          <img src="images/circular_logo.png" alt="Velvet Crumbs Logo" class="logo">
-        </div>
-        <div class="nav-center">
-          <a href="#about">About</a>
-          <a href="#menu">Menu</a>
-          <a href="#contact">Contact</a>
-        </div>
-        <div class="nav-right">
-          <button class="button velvet-button">Pudding Club</button>
-        </div>
-      </nav>
-    </header>
-
-    <!-- Hero Section -->
-    <section class="hero">
-      <div class="hero-content">
-        <h1>New! Indulge in Our Signature Velvet Cakes</h1>
-        <p>
-          Discover the rich flavors of our handcrafted velvet cakes, made with
-          the finest ingredients to create a decadent treat for every occasion.
-        </p>
-        <button class="cta-button">Learn More</button>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Velvet Crumbs</title>
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+ 
+  <header>
+    <nav class="navbar">
+      <div class="nav-left">
+        <img src="images/circular_logo.png" alt="Velvet Crumbs Logo" class="logo">
       </div>
+      <div class="nav-center">
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#contact">Contact</a>
+      </div>
+      <div class="nav-right">
+        <button class="button velvet-button">Pudding Club</button>
+      </div>
+    </nav>
+  </header>
+
+  
+  <section class="hero">
+    <div class="hero-content">
+      <h1>New! Indulge in Our Signature Velvet Cakes</h1>
+      <p>
+        Discover the rich flavors of our handcrafted velvet cakes, made with the finest
+        ingredients to create a decadent treat for every occasion.
+      </p>
+      <button class="cta-button">Learn More</button>
+    </div>
+  </section>
+
+ 
+  <main>
+    <section id="about">
+      <h2>About Us</h2>
+      <p>
+        Velvet Crumbs is your go-to spot for freshly baked bread, pastries, and coffee.
+        We bring joy to every bite with locally sourced ingredients and a passion for baking.
+      </p>
     </section>
 
-    <!-- Main Content -->
-    <main>
-      <section id="about">
-        <h2>About Us</h2>
-        <p>
-          Velvet Crumbs is your go-to spot for freshly baked bread, pastries,
-          and coffee. We bring joy to every bite with locally sourced
-          ingredients and a passion for baking.
-        </p>
-      </section>
+    <section id="menu">
+      <h2>Our Menu</h2>
+      <ul>
+        <li>Fresh Artisan Bread</li>
+        <li>Golden Croissants</li>
+        <li>Custom Cakes</li>
+        <li>Locally Roasted Coffee</li>
+      </ul>
+    </section>
 
-      <section id="menu">
-        <h2>Our Menu</h2>
-        <ul>
-          <li>Fresh Artisan Bread</li>
-          <li>Golden Croissants</li>
-          <li>Custom Cakes</li>
-          <li>Locally Roasted Coffee</li>
-        </ul>
-      </section>
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <p><strong>Address:</strong> 123 Pike Place, Seattle, WA</p>
+      <p><strong>Phone:</strong> <a href="tel:1234567890">(123) 456-7890</a></p>
+      <p><strong>Email:</strong> <a href="mailto:info@velvetcrumbs.com">info@velvetcrumbs.com</a></p>
+    </section>
+  </main>
 
-      <section id="contact">
-        <h2>Contact Us</h2>
-        <p><strong>Address:</strong> 123 Pike Place, Seattle, WA</p>
-        <p>
-          <strong>Phone:</strong> <a href="tel:1234567890">(123) 456-7890</a>
-        </p>
-        <p>
-          <strong>Email:</strong>
-          <a href="mailto:info@velvetcrumbs.com">info@velvetcrumbs.com</a>
-        </p>
-      </section>
-    </main>
 
-    <!-- Footer -->
-    <footer>
-      <p>© 2024 Velvet Crumbs. All rights reserved.</p>
-    </footer>
-  </body>
+  <footer>
+    <p>© 2024 Velvet Crumbs. All rights reserved.</p>
+  </footer>
+</body>
 </html>
